unpackaged/main/default/objects/Prepayment_Option__c/Prepayment_Option__c.object-meta.xml
<CustomObject>
    <label>Prepayment Option</label>
    <nameField>
        <displayFormat>PPO-{000000}</displayFormat>
        <label>Prepayment Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepayment Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>