unpackaged/main/default/objects/Prepayment_Option__c/fields/Funding_Option__c.field-meta.xml
<CustomField>
    <fullName>Funding_Option__c</fullName>
    <label>Funding Option</label>
    <referenceTo>Funding_Options__c</referenceTo>
    <relationshipLabel>Prepayment Options</relationshipLabel>
    <relationshipName>Prepayment_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>