unpackaged/main/default/objects/Prepayment_Option__c/fields/Repayment_Value__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Value__c</fullName>
    <label>Repayment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>